--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </center>
 </header>
 <body>
-    <center><h2>VB#1591 Dashboard Module 2</h2></center>
+    <center><h2>VB#1591 Dashboard Module</h2></center>
     <hr style="height:4px;border-width:0;color:gray;background-color:gray">
     <div class ="container">
         <div id="map" style="height: 380px"></div>
